crates/sdk-derive/tests/ui/router/fail/no_public_methods_direct_impl.stderr
error: Router has no methods. Make sure your implementation contains at least one public method that is not named 'deploy'.

         = help: Check that methods are public (pub fn) for regular implementations
         = help: Consider marking your methods as public: pub fn method_name(...)

  --> tests/ui/router/fail/no_public_methods_direct_impl.rs:16:1
   |
16 | impl<SDK: SharedAPI> App<SDK> {
   | ^^^^
